# mySCP-zephyr

./: .gitmodules  CMakeLists.txt  build_scmi_server_a53.sh  prj.conf  run_linux_guest0.sh  run_linux_guest1.sh  virt-scmi-guest0.dtb  virt-scmi-guest1.dtb  virt-scmi-linux.dts  zephyr.dts
boards/: qemu_cortex_a53.overlay
src/: main.c
